--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -14,7 +14,7 @@
 }
 
 .paymentConfirmationHead {
-  font-family: Oswald;
+  font-family: proxima-nova;
   font-size: 2em;
   text-align: center;
   font-weight: 500;
@@ -22,7 +22,7 @@
 }
 
 paymentConfirmationSuccess {
-  font-family: Oswald;
+  font-family: proxima-nova;
   font-size: 1.5em;
   text-align: center;
   color: #2e3231;
@@ -31,7 +31,7 @@ paymentConfirmationSuccess {
 }
 
 .paymentConfirmationFaliure {
-  font-family: Oswald;
+  font-family: proxima-nova;
   font-size: 2.5em;
   text-align: center;
   color: #ef7070;
@@ -49,14 +49,15 @@ paymentConfirmationSuccess {
   margin-right: auto;
 }
 .paymentConfirmationHead2 {
-  font-family: Oswald;
+  font-family: proxima-nova;
   font-size: 1.3em;
   text-align: center;
   font-weight: 400;
 }
 
 .pcHead3 {
-  font-family: Oswald;
+  font-family: proxima-nova;
+  font-weight: 600;
   text-align: center;
 }
 
@@ -85,7 +86,7 @@ paymentConfirmationSuccess {
   font-size: 1.6em;
   font-weight: bold;
   padding-top: 0.25em;
-  font-family: Oswald;
+  font-family: proxima-nova;
   margin-left: auto;
   margin-right: auto;
 }
@@ -97,13 +98,14 @@ paymentConfirmationSuccess {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  text-wrap: wrap;
 }
 .paymentConfirmationSuccess {
   font-size: 25px;
   text-align: center;
 }
-.fontOswald1 {
-  font-family: oswald;
+.fontproxima-nova1 {
+  font-family: proxima-nova;
   font-size: 1.3em;
   font-weight: 400;
 }
@@ -112,8 +114,8 @@ paymentConfirmationSuccess {
   font-size: 1.3em;
   font-weight: 400;
 }
-.fontOswald2 {
-  font-family: oswald;
+.fontproxima-nova2 {
+  font-family: proxima-nova;
   font-size: 1.3em;
   font-weight: 300;
 }
@@ -125,7 +127,7 @@ paymentConfirmationSuccess {
   overflow: hidden;
 }
 .pcFooterHead {
-  font-family: oswald;
+  font-family: proxima-nova;
   font-size: 1.7em;
   font-weight: 500;
   color: black;
@@ -197,7 +199,7 @@ paymentConfirmationSuccess {
   color: white;
   width: 300px;
   padding: 1.2em;
-  font-family: Oswald;
+  font-family: proxima-nova;
   font-size: 20px;
   letter-spacing: 4px;
   margin-left: auto;
@@ -206,7 +208,7 @@ paymentConfirmationSuccess {
   font-weight: 500;
 }
 .payment-confirmation-error-message {
-  font-family: Oswald;
+  font-family: proxima-nova;
   font-size: 1.5em;
   text-align: center;
   margin-top: 10px;
@@ -262,13 +264,14 @@ paymentConfirmationSuccess {
   }
   .paymentConfirmationHead {
     font-size: 28px;
+    font-weight: 600;
   }
   .paymentConfirmationSuccess {
-    font-size: 25px;
+    font-size: 20px;
     text-align: center !important;
   }
   .paymentConfirmationFaliure {
-    font-family: Oswald;
+    font-family: proxima-nova;
     font-size: 2em;
     text-align: center;
     color: #ef7070;
@@ -286,13 +289,13 @@ paymentConfirmationSuccess {
     margin-right: auto;
   }
   .paymentConfirmationHead2 {
-    font-family: Oswald;
+    font-family: proxima-nova;
     font-size: 1em;
     text-align: center;
     font-weight: 400;
   }
   .pcHead3 {
-    font-family: Oswald;
+    font-family: proxima-nova;
     text-align: center;
     font-size: 24px;
   }
@@ -311,21 +314,21 @@ paymentConfirmationSuccess {
     font-size: 1.3em;
     font-weight: bold;
     padding-top: 0.8em;
-    font-family: Oswald;
+    font-family: proxima-nova;
     margin-left: auto;
     margin-right: auto;
   }
   .pcConsultantNumber1 {
-    width: 19.5em;
+    /* width: 19.5em; */
     text-align: center;
-    font-size: 2em;
+    font-size: 1.7em;
     font-weight: 300;
-    font-family: Oswald;
+    font-family: proxima-nova;
     margin-left: auto;
     margin-right: auto;
   }
-  .fontOswald1 {
-    font-family: oswald;
+  .fontproxima-nova1 {
+    font-family: proxima-nova;
     font-size: 1.2em;
     font-weight: 400;
   }
@@ -334,15 +337,15 @@ paymentConfirmationSuccess {
     font-size: 1.2em;
     font-weight: 400;
   }
-  .fontOswald2 {
-    font-family: oswald;
+  .fontproxima-nova2 {
+    font-family: proxima-nova;
     font-size: 1.2em;
     font-weight: 300;
   }
   .pcFooterHead {
-    font-family: oswald;
+    font-family: proxima-nova;
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 500;
     color: black;
     margin-top: 1.5em;
   }
@@ -390,7 +393,7 @@ paymentConfirmationSuccess {
   right: 1.5em;
   margin-top: -1em;
   font-size: 0.8em;
-  font-family: Oswald;
+  font-family: proxima-nova;
 }
 @media (max-width: 567px) {
   .retryPaymentButton {
@@ -401,7 +404,7 @@ paymentConfirmationSuccess {
     color: white;
     width: 250px;
     padding: 0.8em;
-    font-family: Oswald;
+    font-family: proxima-nova;
     font-size: 20px;
     letter-spacing: 2px;
     margin-left: auto;
@@ -412,9 +415,9 @@ paymentConfirmationSuccess {
 }
 @media only screen and (max-width: 414px) {
   .pcFooterHead {
-    font-family: oswald;
+    font-family: proxima-nova;
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 500;
     color: black;
     margin-top: 1.5em;
   }
@@ -422,9 +425,9 @@ paymentConfirmationSuccess {
 
 @media only screen and (max-width: 375px) {
   .pcFooterHead {
-    font-family: oswald;
+    font-family: proxima-nova;
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 500;
     color: black;
     margin-top: 1.5em;
   }
@@ -432,9 +435,9 @@ paymentConfirmationSuccess {
 
 @media only screen and (max-width: 360px) {
   .pcFooterHead {
-    font-family: oswald;
+    font-family: proxima-nova;
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 500;
     color: black;
     margin-top: 1.5em;
   }
