--- a/src/CreateConsultantComponents/VerifyIdentity/VerifyIdentity.css
+++ b/src/CreateConsultantComponents/VerifyIdentity/VerifyIdentity.css
@@ -41,7 +41,7 @@
 
 .otpSubText {
   font-size: calc(10px+0.7vw);
-  font-family: Domine;
+  font-family: proxima-nova;
   width: 40vh;
   margin-top: 2.5em;
   text-align: center;
@@ -52,14 +52,14 @@
   margin-top: 1em;
   margin-left: 5em;
   color: #dcba80;
-  font-family: oswald;
+  font-family: proxima-nova;
 }
 .resendEmail {
   font-size: 1.2em;
   margin-top: 2em;
   margin-left: 7em;
   color: #dcba80;
-  font-family: Domine;
+  font-family: proxima-nova;
   text-decoration: underline;
   cursor: pointer;
 }
@@ -69,7 +69,7 @@
   padding-right: 2em;
   padding-top: 1em;
   padding-bottom: 1em;
-  font-family: Domine;
+  font-family: proxima-nova;
   margin-top: 1em;
   width: 38vh;
   text-align: center;
@@ -95,7 +95,7 @@
   }
   .otpSubText {
     font-size: calc(5px+0.7vw);
-    font-family: Domine;
+    font-family: proxima-nova;
     width: 45vh;
     margin-top: 1em;
     text-align: center;
@@ -105,14 +105,14 @@
     margin-top: 0.5em;
     margin-left: 4em;
     color: #dcba80;
-    font-family: oswald;
+    font-family: proxima-nova;
   }
   .resendEmail {
     font-size: 1.2em;
     margin-top: 2em;
     margin-left: 5em;
     color: #dcba80;
-    font-family: Domine;
+    font-family: proxima-nova;
     text-decoration: underline;
     cursor: pointer;
   }
