--- a/src/CreateConsultantComponents/BusinessDetails/BusinessDetails.css
+++ b/src/CreateConsultantComponents/BusinessDetails/BusinessDetails.css
@@ -8,13 +8,15 @@
 }
 .BDhead1 {
   color: #085250;
-  font-size: 30px;
-  font-weight: "bold";
   font-family: proxima-nova;
+  font-size: 34px;
+  font-weight: 600;
 }
 .BDstaticText3 {
-  font-size: 16px;
+  color: #000000;
   font-family: proxima-nova;
+  font-size: 18px;
+  font-weight: 500;
   margin-top: 12px;
 }
 .urlRow {
@@ -180,10 +182,11 @@
   font-weight: 400;
 }
 .ssnSubtext {
+  color: #000000;
   font-family: proxima-nova;
+  font-size: 18px;
+  font-weight: 500;
   margin-top: 5px;
-  font-size: 16px;
-  font-weight: 100;
 }
 .ssnInput {
   border-width: 1px;
@@ -258,10 +261,15 @@ input::-webkit-input-placeholder {
   margin-bottom: 7.5px;
 }
 .doingBusinessExtraInformation {
-  font-size: 16px !important;
+  color: #000000;
+  font-family: proxima-nova !important;
+  font-size: 18px !important;
+  font-weight: 500;
   padding: 10px;
   margin-left: 20px;
-  font-family: proxima-nova !important;
+}
+.doingBusinessExtraInformation p:nth-child(2) {
+  font-weight: 600;
 }
 .errorMesSubtext {
   font-size: 12px;
