--- a/src/CreateConsultantComponents/ConfirmDetails/ConfirmDetails.css
+++ b/src/CreateConsultantComponents/ConfirmDetails/ConfirmDetails.css
@@ -23,8 +23,9 @@
 }
 .head1 {
   color:#085250;
-  font-size: 34px;
   font-family: proxima-nova;
+  font-size: 34px;
+  font-weight: 600;
 }
 .signAsConsultant {
   color: #085250;
@@ -43,8 +44,10 @@
   font-weight: 600;
 }
 .SubText {
-  font-size: 15px;
+  color: #000000;
+  font-size: 18px;
   font-family: proxima-nova;
+  font-weight: 500;
 }
 .Input {
   border-width: 1px;
@@ -96,7 +99,7 @@
 .head2 {
   color:#085250;
   font-size: 34px;
-  font-weight: 400;
+  font-weight: 600;
   font-family: proxima-nova;
 }
 .staticText1 {
@@ -110,7 +113,7 @@
 }
 .passwordForgotLink {
   color: #c5a475;
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: underline;
   /* font-family: Domine; */
   font-family: proxima-nova;
@@ -123,9 +126,11 @@
   margin-top: 40px;
 }
 .passwordLabel {
-  margin-bottom: 8px;
-  color: grey;
+  color: #000000;
   font-family: proxima-nova;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 8px;
 }
 
 /* details display */
