--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -129,12 +129,12 @@ paymentConfirmationSuccess {
 .pcFooterHead {
   font-family: proxima-nova;
   font-size: 1.7em;
-  font-weight: 500;
+  font-weight: 600;
   color: black;
   text-align: center;
   margin: auto;
   padding-bottom: 20px;
-  width: 180px;
+  /* width: 180px; */
 }
 
 .pcFooterBody {
