--- a/src/CreateConsultantComponents/Home/Home.css
+++ b/src/CreateConsultantComponents/Home/Home.css
@@ -44,13 +44,12 @@
   height: 80px;
 }
 .headerMarginTop {
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding: 20px 0;
   background: #F7EDE4;
 }
 
 .stepperMarginTop {
-  margin-top: 30px;
+  margin:auto;
   width: 60%;
   margin-left: 6% !important;
 }
@@ -89,7 +88,6 @@
     margin-right: 35px;
   }
   .stepperMarginTop {
-    margin-top: 0;
     width: 100%;
     margin-left: 0% !important;
   }
@@ -110,7 +108,6 @@
     overflow: hidden;
   }
   .stepperMarginTop {
-    margin-top: 0;
     width: 100%;
     margin-left: 0% !important;
   }
