--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -27,7 +27,8 @@ paymentConfirmationSuccess {
   text-align: center;
   color: #2e3231;
   margin-top: 5px;
-  font-weight: 300;
+  font-weight: 500;
+  text-align: center;
 }
 
 .paymentConfirmationFaliure {
@@ -72,8 +73,10 @@ paymentConfirmationSuccess {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  grid-gap: 50px;
   gap: 50px;
   margin: 90px 0;
+
 }
 
 .pcConsultantNumber {
@@ -92,7 +95,6 @@ paymentConfirmationSuccess {
 }
 
 .pcConsultantNumber1 {
-  font-variant: JIS83;
   font-size: 1.5em;
   font-weight: 300;
   margin-left: auto;
@@ -227,6 +229,10 @@ paymentConfirmationSuccess {
     margin-left: 6vw;
     margin-top: 2em;
   }
+
+  .pcInfo {
+      margin: 28px 0 39px;
+   }
 }
 
 @media only screen and (max-width: 550px) {
@@ -267,6 +273,7 @@ paymentConfirmationSuccess {
     font-weight: 600;
   }
   .paymentConfirmationSuccess {
+    color: #000000;
     font-size: 14px;
     font-family: proxima-nova;
     font-weight: 500;
@@ -298,8 +305,9 @@ paymentConfirmationSuccess {
   }
   .pcHead3 {
     font-family: proxima-nova;
+    font-size: 20px;
+    font-weight: 600;
     text-align: center;
-    font-size: 24px;
   }
   .yourConsultantId {
     font-family: proxima-nova;
@@ -323,12 +331,12 @@ paymentConfirmationSuccess {
   }
   .pcConsultantNumber1 {
     /* width: 19.5em; */
-    text-align: center;
-    font-size: 1.7em;
-    font-weight: 300;
     font-family: proxima-nova;
+    font-size: 20px;
+    font-weight: 500;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
   }
   .fontproxima-nova1 {
     font-family: proxima-nova;
