--- a/src/CreateConsultantComponents/Footer/Footer.css
+++ b/src/CreateConsultantComponents/Footer/Footer.css
@@ -44,7 +44,7 @@
   cursor: not-allowed;
 }
 .grey {
-  background-color: grey;
+  background-color: grey ;
   height: 50px;
 }
 
@@ -114,7 +114,7 @@
     margin-left: 450px;
   }
   .grey {
-    width: 220px;
+    width: 56.25vw;
     position: fixed;
     bottom: 0;
   }
@@ -136,14 +136,44 @@
   }
   .mobileLeftMargin {
     margin-top: 5px;
-    margin-right: 10px;
+    margin-right: 5px;
     font-size: 18px;
     font-family: proxima-nova;
   }
   .LeftTextButtonText {
     color: grey;
     background-color: #ffffff;
-    padding: 3px 3px;
+    padding: 3px 10px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .mobileLeftMargin {
+    margin-top: 5px;
+    margin-right: 5px;
+    font-size: 18px;
+    font-family: proxima-nova;
+  }
+
+  .LeftTextButtonText {
+    color: grey;
+    background-color: #ffffff;
+    padding: 3px 7px;
+  }
+
+}
+
+@media only screen and (max-width: 389px) {
+  .LeftTextButtonText {
+    color: grey;
+    background-color: #ffffff;
+    padding: 3px 5px;
+  }
+
+  .grey {
+    width: 55vw;
+    position: fixed;
+    bottom: 0;
   }
 }
 
